force-app/main/default/objects/KimbleOne__TravelItineraryItem__c/KimbleOne__TravelItineraryItem__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Travel Itinerary Item</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Travel Itinerary Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Travel Itinerary Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>