force-app/main/default/objects/KimbleOne__TravelItineraryItem__c/fields/KimbleOne__FlightReturnAirline__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__FlightReturnAirline__c</fullName>
    <label>Return Airline</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airline1</fullName>
            </value>
            <value>
                <fullName>Airline2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>