force-app/main/default/objects/KimbleOne__TravelItineraryItem__c/fields/KimbleOne__ItineraryNotes__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ItineraryNotes__c</fullName>
    <label>Itinerary Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>