force-app/main/default/objects/KimbleOne__TravelItineraryItem__c/fields/KimbleOne__RequiresApproval__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RequiresApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Approval?</label>
    <type>Checkbox</type>
</CustomField>