force-app/main/default/objects/KimbleOne__TravelItineraryItem__c/fields/KimbleOne__TravelRequisitionItem__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TravelRequisitionItem__c</fullName>
    <label>Travel Requisition Item</label>
    <referenceTo>KimbleOne__TravelRequisitionItem__c</referenceTo>
    <relationshipName>TravelItineraryItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>